@@ -29,7 +29,7 @@ to start.
 The homework code is available from the \texttt{Madagascar} repository
 by running
 \begin{verbatim}
-svn co https://rsf.svn.sourceforge.net/svnroot/rsf/trunk/book/geo391/hw1
+svn co http://svn.code.sf.net/p/rsf/code/trunk/book/geo391/hw1 
 \end{verbatim}
 
 \newpage
