@@ -65,5 +65,5 @@
   year = 	 1996,
   volume = 	 22,
   number = 	 10,
-  pages = 	 {1175–1186}}
+  pages = 	 {1175-1186}}
 
