@@ -2,10 +2,6 @@
 
 \author{Sergey Fomel}
 
-\begin{abstract}
-Challenge...
-\end{abstract}
-
 \lefthead{Fomel}
 \righthead{Reproducibility challenge}
 
@@ -18,6 +14,13 @@ Austin, TX 78713-8924 \\
 USA}
 
 \maketitle
+
+
+\begin{abstract}
+This paper presents a challenge for different implementations of
+reproducible research. The task is to capture the workflow described
+in this paper in a form that allows...
+\end{abstract}
 
 \section{Introduction}
 \inputdir{rain}
@@ -45,11 +48,34 @@ selected data samples and the full dataset.
   used as input data in the spatial interpolation contest.  Right: all
   weather stations locations.}
 
+Many different spatial interpolation techniques have been tried on
+this dataset \cite[]{dubois,Fomel.sepphd.107}. For simplicity, I
+present here only one the result of simple Delaunay triangulation with
+linear interpolation of rainfall values inside each triangle. The
+interpolation result is shown in
+Figure~\ref{fig:trian}. Figure~\ref{fig:pred} provides a comparison
+between interpolated and known data values. It also indicates the
+value of the correlation coefficient.
+
+\sideplot{trian}{width=\textwidth}{Rainfall data interpolated using
+  Delaunay triangulation.}
+
+\sideplot{pred}{width=\textwidth}{Correlation between
+  interpolated and true data values.}
+
 \section{Reproducibility challenge}
+
+The challenge of this exercise is to...
 
 \subsection{Madagascar solution}
 
+The solution adopted in the Madagascar project consists of...
+
+To reproduce the paper using Madagascar, ...
+
 \subsection{Additional materials}
+
+In addition to the usual Madagascar files, I provide the following...
 
 \bibliographystyle{seg}
 \bibliography{rain}
