@@ -35,3 +35,13 @@
   pages =	 {409-420}
 }
 
+@PHDTHESIS{Fomel.sepphd.107,
+         school={Stanford University},
+         author={S[ergey] Fomel},
+         title={ Three-dimensional seismic data regularization },
+         year={2001},
+         booktitle={SEP-107},
+         classification={ },
+         comment="",
+         url={http://sepwww.stanford.edu/public/docs/sep107/paper_html/index.html}
+}
