@@ -96,26 +96,24 @@ Flow('fft','vpend2','rtoc | fft3 axis=1 pad=2 | fft3 axis=2 pad=1')
 Flow('right left','vpend2 vxend2 etaend2 theta0end2 fft',
      '''
      anisolr2 seed=2010 dt=%g velx=${SOURCES[1]} eta=${SOURCES[2]} theta=${SOURCES[3]} 
-     fft=${SOURCES[4]} left=${TARGETS[1]} npk=120 eps=1e-5
+     fft=${SOURCES[4]} left=${TARGETS[1]} npk=60 eps=0.0001
      ''' % dt)
 
 Flow('refl',None,
      '''
-     spike n1=913 d1=0.0125 n2=2048 d2=0.0125 o2=34.5125 k1=15 k2=1024 | 
-     smooth rect1=2 rect2=2 repeat=3 | window f1=13
+     spike n1=920 d1=0.0125 o1=-0.25 n2=2048 d2=0.0125 o2=34.5125 k1=23 k2=1024 | 
+     smooth rect1=2 rect2=2 repeat=3 | window f1=20
      ''')
 
 Flow('taper','refl',
      '''
-     rtoc | fft3 axis=1 pad=2 | fft3 axis=2 pad=1 |
-     math output="abs(input)" | real |
-     scale axis=2 | mask min=0.001 | dd type=float |
-     smooth rect1=50 rect2=50 repeat=3
+     spike k1=450 k2=1024 | bandpass fhi=20 |
+     rtoc | fft3 axis=1 pad=2 | fft3 axis=2 pad=1 | math output="abs(input)" | real
      ''')
 
 Result('taper','grey title="Wavenumber Taper" screenratio=1 allpos=y')
 
-Flow('tright','taper right','spray axis=1 n=18 | put n3=1 n2=3686400 | mul ${SOURCES[1]}')
+Flow('tright','taper right','spray axis=1 n=12 | put n3=1 n2=3686400 | mul ${SOURCES[1]}')
 
 Flow('wave','source refl left tright',
      '''
@@ -131,7 +129,7 @@ Plot('wave',
 for f3 in (1299,2299,3299,4299):
     Result('snap%d' % f3,'wave',
            ''' 
-           window n3=1 f3=%d |
+           window n3=1 f3=%d | 
            grey label1=Depth label2=Distance wanttitle=n min2=38 max2=56
            unit1=km unit2=km screenwd=14.41 screenht=9 clip=0.015
            ''' % f3)
